--- a/app/index.html
+++ b/app/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <title>Document</title>
 </head>
-<body ng-app="app">
-    <h1>Test</h1>
-    <h2>{{4+7}}</h2>
+<body class="container" ng-app="app">
+    <ui-view></ui-view>
     <script type="text/javascript" src="bundle.js"></script>
 </body>
