--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Document</title>
 </head>
-<body class="container" ng-app="app">
+<body ng-app="app">
     <ui-view></ui-view>
     <script type="text/javascript" src="bundle.js"></script>
 </body>
