--- a/app/home/directives/user_toDo/user_toDo.html
+++ b/app/home/directives/user_toDo/user_toDo.html
@@ -9,8 +9,9 @@
         <input id="toggle-all" type="checkbox" ng-model="allChecked" ng-click="markAll(allChecked)">
             <ul id="todo-list" class="list-group">
     						<li ng-repeat="todo in tabController.todos" class="list-group-item">
-    								<input data-toggle="toggle" type="checkbox" ng-model="todo.completed" ng-change="toggleCompleted(todo)">
-    								<label ng-dblclick="editTodo(todo)">{{todo.title}}</label>
+    								<input data-toggle="toggle" type="checkbox" ng-model="todo.value.completed" ng-change="toggleCompleted(todo)">
+    								<span ng-hide="todo.editing" ng-dblclick="tabController.editTodo(todo)">{{todo.value.title}}</span>
+    								<input ng-show="todo.editing" ng-model="todo.value.title" ng-blur="tabController.doneEditing(todo)" autofocus />
     								<button class="destroy" ng-click="tabController.removeTodo(todo)"></button>
     						</li>
     		</ul>
