change todos array

--- a/app/home/directives/user_toDo/user_toDo.html
+++ b/app/home/directives/user_toDo/user_toDo.html
@@ -7,14 +7,14 @@
     
     <section>
         <input id="toggle-all" type="checkbox" ng-model="allChecked" ng-click="markAll(allChecked)">
-                            <li ng-repeat="todo in tabController.todos | filter:tabController.statusFilter">
-    								<input data-toggle="toggle" ng-show="todo.value.user == tabController.user" type="checkbox" ng-model="todo.value.completed" ng-change="toggleCompleted(todo)">
-    								<span ng-hide="todo.editing" ng-dblclick="tabController.editTodo(todo)">{{todo.value.title}}</span>
+                            <li ng-repeat="todo in tabController.todos">
+    								<input data-toggle="toggle" ng-show="todo.user == tabController.user" type="checkbox" ng-model="todo.completed" ng-change="toggleCompleted(todo)">
+    								<span ng-hide="todo == tabController.editingToDo" ng-dblclick="tabController.editTodo(todo)">{{todo.title}}</span>
     								<form ng-submit="tabController.doneEditing(todo)">
-    							    	<input ng-show="todo.editing" ng-model="todo.value.title" ng-blur="tabController.doneEditing(todo)" autofocus />
+    							    	<input ng-show="todo == tabController.editingToDo" ng-model="todo.title" ng-blur="tabController.doneEditing(todo)" autofocus />
     							    </form>
     							    <span>{{todo.value.user}}</span>
-    								<button class="destroy" ng-show="todo.value.user == tabController.user" ng-click="tabController.removeTodo(todo)">Destroy</button>
+    								<button class="destroy" ng-show="todo.user == tabController.user" ng-click="tabController.removeTodo(todo)">Destroy</button>
     						</li>
     </section>
     
