add user filter

--- a/app/home/home.html
+++ b/app/home/home.html
@@ -4,11 +4,10 @@
     <div>
         <div ng-show="tabController.user">
         <div class="list-group">
-            <a href="" class="list-group-item" ng-click="tabController.onUser()"> {{tabController.user}} To Do</a>
-            <a href="" class="list-group-item" ng-click="tabController.onAll()"> All</a>
+            <a href="" class="list-group-item" ng-click="tabController.onUser()">Tabs</a>
+            <a href="" class="list-group-item" ng-click="tabController.onAll()">Statistics</a>
         </div>
     </div>
-        
             <div ng-switch='tabController.selectedTab'>
                 <div ng-switch-when='user'>
                     <user-to-do></user-to-do>
